# marvin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prefectignore  404.html  CLAUDE.md  CNAME  Dockerfile  Dockerfile.slackbot  LICENSE  MANIFEST.in  README.md  Untitled19.ipynb  _mkdocs.yml  alembic.ini  deployment.yaml  docs-plan.md  example.py  goose_horror_story.txt  hello.py  hello_world.py  index.html  justfile  mkdocs.insiders.yml  mkdocs.yml  model.py  netlify.toml  notes.txt  objects.inv  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements-plugins.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  state.json  tailwind.config.js  test.ipynb
docs/: README.md  ai_style_guide.md  community.mdx  docs.json  faq.md  hooks.py  index.md  installation.mdx  mint.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  quickstart.mdx  style.css  style_guide.md  welcome.mdx
docs/ai/: casting.md
docs/ai/audio/: speech.md
docs/ai/images/: painting.md
docs/ai/interactive/: applications.md  assistants.md
docs/ai/text/: converting.md  extraction.md  generation.md
docs/ai/vision/: captioning.md  classification.md  converting.md  extraction.md
docs/api-reference/: marvin-agents-actor.mdx  marvin-agents-agent.mdx  marvin-agents-names.mdx  marvin-agents-team.mdx  marvin-agents.mdx  marvin-beta-observability-openai.mdx  marvin-beta-observability.mdx  marvin-beta.mdx  marvin-cli-config.mdx  marvin-cli-main.mdx  marvin-cli.mdx  marvin-database.mdx  marvin-defaults.mdx  marvin-engine-events.mdx  marvin-engine-llm.mdx  marvin-engine-orchestrator.mdx  marvin-engine-streaming.mdx  marvin-engine.mdx  marvin-fns-cast.mdx  marvin-fns-classify.mdx  marvin-fns-extract.mdx  marvin-fns-fn.mdx  marvin-fns-generate.mdx  marvin-fns-plan.mdx  marvin-fns-run.mdx  marvin-fns-say.mdx  marvin-fns-summarize.mdx  marvin-fns.mdx  marvin-handlers-print_handler.mdx  marvin-handlers-queue_handler.mdx  marvin-handlers.mdx  marvin-instructions.mdx  marvin-memory-memory.mdx  marvin-memory-providers-chroma.mdx  marvin-memory-providers-lance.mdx  marvin-memory-providers-qdrant.mdx  marvin-memory-providers.mdx  marvin-memory.mdx  marvin-prompts.mdx  marvin-settings.mdx  (+12 more)
docs/api_reference/: index.md  marvin.md  requests.md  settings.md  types.md
docs/api_reference/ai/: audio.md  images.md  text.md
docs/api_reference/beta/: applications.md  assistants.md  vision.md
docs/api_reference/components/: ai_application.md  ai_classifier.md  ai_function.md  ai_model.md  classifier.md  function.md  functions.md  model.md  models.md  prompt_fn.md  text.md
docs/api_reference/core/: _v1_compat.md  audio.md  images.md  text.md
docs/api_reference/prompts/: base.md
docs/api_reference/utilities/: async_utils.md  asyncio.md  collections.md  context.md  embeddings.md  history.md  images.md  jinja.md  messages.md  openai.md  pydantic.md  python.md  slack.md  strings.md  testing.md  tools.md  types.md
docs/assets/: code.css
docs/audio/recording/: index.html
docs/audio/speech/: index.html
docs/audio/transcription/: index.html
docs/community/: development_guide.md  index.md
docs/components/: ai_application.md  ai_classifier.md  ai_function.md  ai_model.md  applications.md  classifier.md  classifiers.md  models.md  overview.md
docs/components (old)/: classify.md  functions.md  models.md  overview.md
docs/concepts/: agents.mdx  concepts.mdx  memory.mdx  tasks.mdx  teams.mdx  threads.mdx  tools-and-context.mdx
docs/configuration/: providers.md  settings.md
docs/configuration/settings/: index.html
docs/contributing/: discuss.md  index.md
docs/core/: classification.md  extraction.md  function.md  generation.md  painting.md
docs/deployment/: index.md
docs/development/: development.md  plugins.md
docs/docs/audio/: recording.md  speech.md  transcription.md
docs/docs/configuration/: settings.md
docs/docs/images/: generation.md  painting.md
docs/examples/: ai_functions.md  ai_models.md  being_specific_about_types.md  call_routing.md  classification_api.md  deduplication.md  deployment.ipynb  extraction_api.md  financial_extraction.md  github_digest.md  meeting_notes.md  python_augmented_prompts.md  slackbot.md  webcam_narration.md  xkcd_bird.md  xkcd_scientific_papers.md
docs/functions/: cast.mdx  classify.mdx  extract.mdx  fn.mdx  generate.mdx  plan.mdx  run.mdx  say.mdx  summarize.mdx
docs/getting_started/: ai_functions_quickstart.md  ai_models_quickstart.md  bots_quickstart.md  chat-quickstart.md  chat.md  chat_quickstart.md  installation.md  openai.md  towel-quickstart.md
docs/guide/: ai_functions.md  bots.md  cli.md  configuration.md  infra.md  loaders_and_documents.md  overview.md  plugins.md  towel.md
docs/guides/: building-a-chatbot.mdx  cli.mdx  configuration.mdx  configure-llms.mdx  database-migrations.mdx  mcp.mdx  migration-guide.mdx  multi-step-workflow.mdx  semantix.mdx
docs/help/: legacy_docs.md
docs/llms/: llms.md
docs/motivation/: index.md
docs/overrides/: home.html
docs/patterns/: instructions.mdx  interactivity.mdx  memory.mdx  running-tasks.mdx  task-results.mdx  tools.mdx
docs/prompting/: prompt_function.md
docs/snippets/: version-badge.mdx
docs/src/: community.md  community_commit.md  feedback.md  getting_started.md  guide_overview.md  hello_marvin.md  index.md  motivation.md  reference.md  reference_ai_classifier.md  reference_prompts.md  reference_prompts_execute.md
docs/stylesheets/: extra.css
docs/tools/: classification.md  extraction.md  function.md  generation.md
docs/utilities/: chat_completion.md  prompt.md
docs/welcome/: hello_marvin.md  installation.md  overview.md  quickstart.md  quickstart_old.md  tutorial.md  what_is_marvin.md
examples/slack_search/: pyproject.toml
examples/slackbot/: .dockerignore  ASSETS.md  CHANNEL_RESTRICTIONS.md  CLAUDE.md  Dockerfile.slackbot  README.md  api.py  bondpercolation.py  community_bot.py  community_bot_setup.py  core.py  hello_slackbot.env  index.html  modules.py  pyproject.toml  research_agent.py  search.py  settings.py  slack.py  start.py  strings.py  wrap.py
(+1187 files in other folders)
