[project]
name = "marvin"
description = "a simple and powerful tool to get things done with AI"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.4",
    "partial-json-parser>=0.2.1.1.post5",
    "pydantic-ai>=0.0.30",
    "pydantic-settings>=2.6.1",
    "pydantic[email]>=2.10.2",
    "rich>=13.9.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "chromadb>=0.6.0",
    "copychat>=0.5.2",
    "dirty-equals>=0.9.0",
    "ipython>=8.12.3",
    "pdbpp>=0.10.3",
    "pre-commit",
    "pytest-asyncio>=0.23.5",
    "pytest-env>=1.1.5",
    "pytest-rerunfailures>=15.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff",
]

# Add this section for CLI entry point
[project.scripts]
marvin = "marvin.cli.main:app"

# pytest configuration
[tool.pytest.ini_options]
addopts = "--verbose --color=yes"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
timeout = 60
testpaths = ["tests"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "node_modules",
]

env = [
    "MARVIN_TEST_MODE=1",
    'D:MARVIN_AGENT_MODEL=openai:gpt-4o-mini',
    'D:MARVIN_AGENT_TEMPERATURE=0.0',
    'D:MARVIN_AGENT_RETRIES=3',
    'D:MARVIN_MEMORY_PROVIDER=chroma-ephemeral',
    'D:MARVIN_LOG_LEVEL=DEBUG',
    'D:MARVIN_ENABLE_DEFAULT_PRINT_HANDLER=0',
]
[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001", "RUF013"]

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"
