[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mkdocs-jupyter = "^0.24.1"
mkdocs-awesome-pages-plugin = "^2.9.1"
mkdocs-autolinks-plugin = "^0.7.0"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
